[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Eric Sivonxay", email = "esivonxay@lbl.gov" },
    { name = "Muratahan Aykol", email = "maykol@lbl.gov" },
    { name = "Hui Zheng", email = "huizheng@lbl.gov" },
]
name = "mpmorph"
dependencies = [
    "mp-api>=0.27.1",
    "fireworks>=2.0.3",
    "atomate>=1.0.3",
    "atomate2>=0.0.8",
]
description = "MPmorph is a collection of tools to run and analyze ab-initio molecular dynamics (AIMD) calculations run with VASP, and is currently under development. It relies heavily on tools developed by the Materials Project (pymatgen, custodian, fireworks) and atomate."
readme = "README.md"
keywords = ["amorphous", "materials", "computational", "dft", "simulation"]
license = { text = "modified BSD" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = '>="3.8"'

[project.optional-dependencies]
strict = [
    "mp-api==0.27.5",
    "fireworks==2.0.3",
    "atomate==1.0.3",
    "atomate2==0.0.8",
    "m3gnet==0.1.0",
]
with_m3gnet = ["m3gnet==0.1.0"]
tests = ["pytest==7.1.3", "pytest-cov==4.0.0"]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '\#\s*pragma: no cover',
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]

[tool.flake8]
exclude = ".git,__pycache__,tests"
max-line-length = 88
max-doc-length = 88
extend-ignore = "E741,W291,W293,E501,E231,E203,F401"
min-python-version = "3.8.0"
docstring-convention = "google"

[tool.isort]
profile = "black"
known_first_party = "mpmorph"

[tool.pytest]
addopts = "--durations=10"

[tool.setuptools.package-data]
rxn_network = ["py.typed"]

[tool.setuptools-git-versioning]
enabled = true
